[package]
name = "geph4-protocol"
version = "0.16.4"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"
description="geph4 protocol helpers"
license="GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

acidjson= "0.1.2"
anyhow = "1.0.65"
async-net = "1.7.0"
bincode = "1.3.3"
bytes = { version = "1.2.1", features = ["serde"] }
ed25519-dalek={ version = "1.0.1", features = ["serde"] }
event-listener= "2.5.3"
fastrand = "1.8.0"
futures-util= "0.3.24"
geph4-aioutils = "0.1.3"
# geph4-binder-transport = "0.2"
hex = "0.4.3"

log = "0.4.17"
mizaru = "0.1.3"
once_cell= "1.15.0"
parking_lot = { version = "0.11.2", features = ["serde"] }
rand= "0.7.3"
regex= "1.6.0"
rsa-fdh = "0.5.0"
serde={ version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
sha2 = "0.9.9"
smol= "1.2.5"
smolscale= "0.3.41"
smol-timeout = "0.6.0"
#sosistab={path="../sosistab"}
strsim = "0.10.0"
tap= "1.0.1"

x25519-dalek={ version = "1.2.0", features = ["serde"], default-features=false }
nanorpc = "0.1.7"
async-trait = "0.1.57"
thiserror = "1.0.37"
smol_str = { version = "0.1.23", features = ["serde"] }
stdcode = "0.1.10"
base64 = "0.13.0"
serde_with = {version="2.0.1", features=["base64", "hex"]}
reqwest = "0.11.12"
async-compat = "0.2.1"
blake3 = "1.3.1"
chacha20poly1305 = "0.7"
arrayref = "0.3.6"
rsa = {version = "0.3", features=["serde"]}
native-tls = {version="0.2", features=["vendored"]}
dashmap = "5.4.0"
melprot = "0.13.4"
melstructs = "0.3.2"
# gibbername = { git = "https://github.com/mel-project/gibbername", branch = "master" }
melbootstrap = "0.8.3"
tmelcrypt = "0.2.7"
gibbername = "0.1.0"
mini-moka = "0.10.0"
# sosistab= "0.4.4"
