[package]
name = "geph4-protocol"
version = "0.18.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2021"
description = "geph4 protocol helpers"
license = "GPL-3.0-only"

[dependencies]
anyhow = "1.0.86"
async-net = "2.0.0"
bincode = "1.3.3"
bytes = { version = "1.6.0", features = ["serde"] }
ed25519-dalek = { version = "2.1.1", features = ["serde"] }
futures-util = "0.3.30"
hex = "0.4.3"
log = "0.4.21"
mizaru = "0.1.3"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
smol = "2.0.0"
smolscale = "0.4.4"
smol-timeout = "0.6.0"
x25519-dalek = { version = "2.0.1", features = [
  "serde",
  "static_secrets",
  "getrandom",
] }
async-trait = "0.1.80"
thiserror = "1.0.61"
smol_str = { version = "0.2.2", features = ["serde"] }
stdcode = "0.1.14"
base64 = "0.22.1"
serde_with = { version = "3.8.1", features = ["base64", "hex"] }
reqwest = "0.12.4"
blake3 = "1.5.1"
chacha20poly1305 = "0.10"
arrayref = "0.3.7"
rsa = { version = "0.9", features = ["serde"] }
tmelcrypt = "0.2.7"
nanorpc = "0.1.12"
